dix icon now showing

--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="sitemap" href="/sitemap-index.xml" />
+    <!-- Updated favicon path -->
+    <link rel="icon" type="image/x-icon" href="./public/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="./public/favicon.ico" />
+
+    <!-- For better browser support, add multiple link tags -->
+    <link rel="icon" type="image/png" href="./public/favicon.ico" />
+    <link rel="apple-touch-icon" href="./public/favicon.ico" />
+
+    <!-- <link rel="sitemap" href="/sitemap-index.xml" /> -->
     <meta property="og:title" content="Hi! I'm Omix01" />
     <meta property="og:type" content="website" />
     <!-- <meta property="og:url" content="https://973.wtf/" /> -->
